Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37787

Transient scrollbars disappear

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.3.0 RC1
    • 5.3.0 Beta1
    • None
    • OS X, Linux
    • qtbase#stable: 123ae472e2668a1f57f7c69a1a2a59336f83d06a

    Description

      Transient scrollbars sometimes disappear so that they never come back visible. This happens on Mac and with Fusion style when QStyle::SH_ScrollBar_Transient is enabled. The problem is rare and difficult to reproduce, but it happens eg. in Qt Creator.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes